resolve dropdown dark mode style.have to  change it to ios alert style.

--- a/src/global.scss
+++ b/src/global.scss
@@ -66,8 +66,8 @@ ion-menu{
 }
 
 .dialog-modal-4-order-addcancel .modal-wrapper {
-    width: 50%;
-    height: 50%;
+    width: 60%;
+    height:70%;
     border-radius: 8px;
 }
 
